fix(openlayers): added z-index to display over map

--- a/scss/os/_overrides_openlayers.scss
+++ b/scss/os/_overrides_openlayers.scss
@@ -168,6 +168,7 @@
   padding: .5rem;
   right: auto;
   top: auto;
+  z-index: 1;
 
   .ol-scale-line-inner {
     border-color: rgba($body-color, .8);
